--- a/index.html
+++ b/index.html
@@ -67,10 +67,52 @@
             <section>
                 <h2>about me</h2>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                    For Cgncvk, the complexity of life and the infinite possibilities of the universe have always been a matter of curiosity, and he aims to make the universe more understandable and more habitable.
                 </p>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                    Collaborating on projects that bridged the gap between engineering and social sciences, he demonstrated a holistic approach to problem-solving. Cgncvk, in his relentless pursuit, continues to struggle to make sense of life and unravel the complexity of the universe by increasing his knowledge in formal, natural, and social sciences.
+                </p>
+                <p>
+                    His commitment to unraveling the mysteries of life extended to social sciences, where he recognized the importance of societal perspectives in understanding scientific advancements.
+                </p> 
+                <p>
+                    Armed with a wealth of academic achievements and professional experiences, Cagin envisions a future where scientific and social interactions harmonize seamlessly. The goal is not just personal success but a collective elevation of understanding, where the dialogue between humanity and science creates a symphony of progress.
+                </p>
+                <p>
+                    Cgncvk was born in 1995. He graduated from 26 Kasim Primary School in 2009 and completed his high school education at Yakup Aksoy Maritime Anatolian Vocational High School in 2013 due to his family's maritime background.
+                </p>
+                <p>
+                    After his high school education, he worked on international ships with the decision to both develop himself by intertwining with different cultures and to financially support his undergraduate education. Cgncvk In line with the requirements of the time gained practical experience and a unique perspective that laid the groundwork for his future endeavors. Having succeeded in the necessary examinations for additional courses, cgncvk became a certified marine engineer as well.
+                </p>
+                <p>
+                    He completed his bachelor's degree in mechatronics engineering in order to create the infrastructure for his goals. Throughout his undergraduate years, Cgncvk engaged in diverse engineering projects, honing his skills and gaining insights into the intersection of engineering disciplines. He completed his undergraduate education in Mechatronics Engineering at Sakarya University, Faculty of Technology.
+                </p>
+                <p>
+                    Driven by curiosity, Cgncvk developed his academic journey from Mechatronics to the complex field of neuroscience/neuroengineering with the aim to first understand the mechanisms of his own body in order to understand the universe. The merging of technology and the human mind became a focal point, reflecting Cgncvk's commitment to understanding the complexities of the brain.
+                </p>
+                <p>
+                    He continued his brain research and biotechnology studies professionally at Sankara Brain and Biotechnology Research Center with academia-industry collaborations. During this period, he was involved in various technology business ventures. He continued his engineering, data science approach and collaborations in the fields of basic sciences, medicine and veterinary medicine.
+                </p>
+                <p>
+                    After discovering the field of biophysics, he completed his master's degree at Istanbul University-Cerrahpaşa with the principle of integration of engineering sensitivity, social sciences and medical sciences. As the sun sets on each achievement, a new dawn emerges with the ongoing Ph.D. journey in Biophysics in Istanbul University-Cerrahpasa Medical Faculty. Cgncvk's commitment to expanding the boundaries of knowledge persists, contributing to the ever-growing tapestry of scientific understanding.
+                </p>
+                <p>
+                    Transitioning seamlessly into the professional realm, Cgncvk embraced the role of a biomedical engineer. Academic collaborations became the bridge between theory and practice, enhancing Cgncvk's ability to apply cutting-edge knowledge to real-world challenges.
+                </p>
+                <p>
+                    Presently, He continues his work as a dedicated member of the Digital Healthcare team with passion in the field of biomedical engineering. His proficiency in navigating the medical system development flow is evident in his hands-on role within multi-disciplinary teams. He not only supports clinical validation activities but also liaises with external parties for clinical studies, overseeing data collection and providing meticulous physiologically relevant data analysis and interpretation.
+                </p>
+                <p>
+                    With a conviction that his current fields of work are key to making sense of life, Cgncvk continues to push the boundaries of scientific exploration.
+                </p>
+                <p>
+                    Be a hands-on member of multi-disciplinary teams of HW, SW and Algorithm Engineers to prototype and develop breakthrough medical systems.
+                </p>
+                <p>
+                    Cgncvk embodies the spirit of a hands-on explorer, fearlessly navigating the complexities of life through the lens of science and innovation. Cgncvk, who is married, also carries out various joint projects with his wife, who is a computer scientist.
+                </p>
+                <p>
+                    He also works to improve both his mind and body by engaging in sports such as street workout. His passion extends to digital art, where he captures and creates moments that transcend the ordinary.
                 </p>
             </section>
             <section>
