--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <td class="animated zoomIn" style="animation-delay:2.2s;"><a class="social"><i class="fab fa-medium"></i></a></td>
                     <td class="animated zoomIn" style="animation-delay:2.4s;"><a class="social"><i class="fab fa-linkedin"></i></a></td>
                     <td class="animated zoomIn" style="animation-delay:2.6s;"><a class="social"><i class="fab fa-instagram"></i></a></td>
-                    <td class="animated zoomIn" style="animation-delay:2.8s;"><a class="social"><i class="fab fa-email"></i></a></td>
+                    <td class="animated zoomIn" style="animation-delay:2.8s;"><a class="social"><i class="fab fa-mail"></i></a></td>
                 </tr>
         </table>
     </div>
