--- a/index.html
+++ b/index.html
@@ -36,12 +36,20 @@
             <a onclick="showcontact()">contact</a>
         </div>
         <table>
-                <tr>
-                    <td class="animated zoomIn" style="animation-delay:2.2s;"><a class="social"><i class="fab fa-medium"></i></a></td>
-                    <td class="animated zoomIn" style="animation-delay:2.4s;"><a class="social"><i class="fab fa-linkedin"></i></a></td>
-                    <td class="animated zoomIn" style="animation-delay:2.6s;"><a class="social"><i class="fab fa-instagram"></i></a></td>
-                    <td class="animated zoomIn" style="animation-delay:2.8s;"><a class="social"><i class="fab fa-envelope"></i></a></td>
-                </tr>
+    <tr>
+        <td class="animated zoomIn" style="animation-delay:2.2s;">
+            <a class="social" href="https://medium.com/@cagincevik"><i class="fab fa-medium"></i></a>
+        </td>
+        <td class="animated zoomIn" style="animation-delay:2.4s;">
+            <a class="social" href="https://your-linkedin-profile-url"><i class="fab fa-linkedin"></i></a>
+        </td>
+        <td class="animated zoomIn" style="animation-delay:2.6s;">
+            <a class="social" href="https://your-instagram-profile-url"><i class="fab fa-instagram"></i></a>
+        </td>
+        <td class="animated zoomIn" style="animation-delay:2.8s;">
+            <a class="social" href="mailto:cgncvk@oulook.com"><i class="fab fa-envelope"></i></a>
+        </td>
+    </tr>
         </table>
     </div>
     <div id="work_container" class="container">
