--- a/index.html
+++ b/index.html
@@ -41,13 +41,13 @@
             <a class="social" href="https://medium.com/@cagincevik"><i class="fab fa-medium"></i></a>
         </td>
         <td class="animated zoomIn" style="animation-delay:2.4s;">
-            <a class="social" href="https://your-linkedin-profile-url"><i class="fab fa-linkedin"></i></a>
+            <a class="social" href="https://www.linkedin.com/in/cagincevik/"><i class="fab fa-linkedin"></i></a>
         </td>
         <td class="animated zoomIn" style="animation-delay:2.6s;">
-            <a class="social" href="https://your-instagram-profile-url"><i class="fab fa-instagram"></i></a>
+            <a class="social" href="https://www.instagram.com/cgncvk/"><i class="fab fa-instagram"></i></a>
         </td>
         <td class="animated zoomIn" style="animation-delay:2.8s;">
-            <a class="social" href="mailto:cgncvk@oulook.com"><i class="fab fa-envelope"></i></a>
+            <a class="social" href="mailto:cgncvk@oulook.com"><i class="fa fa-envelope"></i></a>
         </td>
     </tr>
         </table>
