--- a/index.html
+++ b/index.html
@@ -130,42 +130,11 @@
                 </p>
             </section>
         </div>
-          <div id="contact_container" class="container">
-            <div onclick="closecontact()"><i class="fas fa-angle-down"></i></div>
-            <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Resume</title>
-    <style>
-        /* Your CSS styles go here */
-        #resume_container {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background-color: white;
-            z-index: 9999;
-            padding: 20px;
-            overflow-y: auto;
-        }
-    </style>
-</head>
-<body>
-    <div id="resume_container" class="container">
-        <div onclick="closeResume()"><i class="fas fa-angle-down"></i></div>
-        <h1>Resume</h1>
-        <embed src="srep41873.pdf" type="application/pdf" width="100%" height="600px">
-    </div>
-
-    <script>
-        // Your JavaScript code goes here
-        function closeResume() {
-            document.getElementById('resume_container').style.display = 'none';
-        }
-    </script>
-</body>
-        </div>
+          <div id="resume_container" class="container">
+    <div onclick="closeResume()"><i class="fas fa-angle-down"></i></div>
+    <h1>Resume</h1>
+    <embed src="path_to_your_resume.pdf" type="application/pdf" width="100%" height="600px">
+          </div>
         <div id="footer">
             made on earth by a human <br> <a href="https://cgncvk.github.io">cgncvk</a>
         </div>
