--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
           <div id="resume_container" class="container">
     <div onclick="closeResume()"><i class="fas fa-angle-down"></i></div>
     <h1>Resume</h1>
-    <embed src="path_to_your_resume.pdf" type="application/pdf" width="100%" height="600px">
+    <embed src="srep41873.pdf" type="application/pdf" width="100%" height="600px">
           </div>
         <div id="footer">
             made on earth by a human <br> <a href="https://cgncvk.github.io">cgncvk</a>
