--- a/index.html
+++ b/index.html
@@ -130,11 +130,21 @@
                 </p>
             </section>
         </div>
-          <div id="resume_container" class="container">
-    <div onclick="closeResume()"><i class="fas fa-angle-down"></i></div>
-    <h1>Resume</h1>
-    <embed src="srep41873.pdf" type="application/pdf" width="100%" height="600px">
-          </div>
+          <div id="contact_container" class="container">
+            <div onclick="closecontact()"><i class="fas fa-angle-down"></i></div>
+            <h1>contact.</h1>
+            <section>
+                <h2>contact me</h2>
+                <p>
+                    <form>
+                        <input type="text" placeholder="name" required>
+                        <input type="email" placeholder="email" required><br>
+                        <textarea placeholder="your message" required rows="5"></textarea><br>
+                        <button class="btn_one">send</button>
+                    </form> 
+                </p>
+            </section>
+        </div>
         <div id="footer">
             made on earth by a human <br> <a href="https://cgncvk.github.io">cgncvk</a>
         </div>
