--- a/index.html
+++ b/index.html
@@ -132,20 +132,12 @@
         </div>
           <div id="contact_container" class="container">
     <div onclick="closecontact()"><i class="fas fa-angle-down"></i></div>
-    <h1>contact.</h1>
+    <h1>resume.</h1>
     <section>
-        <h2>contact me</h2>
-        <p>
-            <form>
-                <input type="text" placeholder="name" required>
-                <input type="email" placeholder="email" required><br>
-                <textarea placeholder="your message" required rows="5"></textarea><br>
-                <button class="btn_one">send</button>
-            </form> 
-        </p>
+        <h2><pdf</h2>
         <div>
             <!-- Embedding PDF -->
-            <embed src="srep41873.pdf" type="application/pdf" width="100%" height="600px">
+            <embed src="srep41873.pdf" type="application/pdf" width="100%" height="300px">
         </div>
     </section>
 </div>
