--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     </div>
     <div id="work_container" class="container">
         <div onclick="closework()"><i class="fas fa-angle-right"></i></div>
-        <h1>works.</h1>
+        <h1>works</h1>
         <section>
             <h2>work title</h2>
             <p>
@@ -71,7 +71,7 @@
     </div>
     <div id="about_container" class="container">
             <div onclick="closeabout()"><i class="fas fa-angle-left"></i></div>
-            <h1>about.</h1>
+            <h1>about</h1>
             <section>
                 <p>
                     For Cgncvk, the complexity of life and the infinite possibilities of the universe have always been a matter of curiosity, and he aims to make the universe more understandable and more habitable.
@@ -131,7 +131,7 @@
         </div>
           <div id="contact_container" class="container">
     <div onclick="closecontact()"><i class="fas fa-angle-down"></i></div>
-    <h1>resume.</h1>
+    <h1>resume</h1>
     <section>
         <h2><pdf</h2>
         <div>
