--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
     </div>
     <a id="about" onclick="showabout()" class="animated fadeIn" style="animation-delay:2.2s;">about</a>
     <a id="work" onclick="showwork()" class="animated fadeIn" style="animation-delay:2.2s;">work</a>
-    <a id="contact" onclick="showcontact()" class="animated fadeIn" style="animation-delay:2.2s;">contact</a>
+    <a id="resume" onclick="showcontact()" class="animated fadeIn" style="animation-delay:2.2s;">resume</a>
     <div id="middle" class="animated slideInDown" style="animation-delay:2.0s;">
         <h1>Çağın Çevik</h1>
         <h2>I'm working on techniques to make life more understandable and livable</h2>
         <div id="menu">
             <a onclick="showabout()">about</a>
             <a onclick="showwork()">work</a>
-            <a onclick="showcontact()">contact</a>
+            <a onclick="showcontact()">resume</a>
         </div>
         <table>
     <tr>
@@ -54,9 +54,9 @@
     </div>
     <div id="work_container" class="container">
         <div onclick="closework()"><i class="fas fa-angle-right"></i></div>
-        <h1>works</h1>
+        <h1>projects</h1>
         <section>
-            <h2>work title</h2>
+            <h2>Some Ongoing Projects</h2>
             <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
             </p>
@@ -120,12 +120,6 @@
                 </p>
                 <p>
                     He also works to improve both his mind and body by engaging in sports such as street workout. His passion extends to digital art, where he captures and creates moments that transcend the ordinary.
-                </p>
-            </section>
-            <section>
-                <h2>skills</h2>
-                <p>
-                    i do eveything ;)
                 </p>
             </section>
         </div>
