--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </div>
     <a id="about" onclick="showabout()" class="animated fadeIn" style="animation-delay:2.2s;">about</a>
     <a id="work" onclick="showwork()" class="animated fadeIn" style="animation-delay:2.2s;">work</a>
-    <a id="resume" onclick="showcontact()" class="animated fadeIn" style="animation-delay:2.2s;">resume</a>
+    <a id="contact" onclick="showcontact()" class="animated fadeIn" style="animation-delay:2.2s;">contact</a>
     <div id="middle" class="animated slideInDown" style="animation-delay:2.0s;">
         <h1>Çağın Çevik</h1>
         <h2>I'm working on techniques to make life more understandable and livable</h2>
