--- a/index.html
+++ b/index.html
@@ -86,10 +86,7 @@
                     Armed with a wealth of academic achievements and professional experiences, Cagin envisions a future where scientific and social interactions harmonize seamlessly. The goal is not just personal success but a collective elevation of understanding, where the dialogue between humanity and science creates a symphony of progress.
                 </p>
                 <p>
-                    Cgncvk was born in 1995. He graduated from 26 Kasim Primary School in 2009 and completed his high school education at Yakup Aksoy Maritime Anatolian Vocational High School in 2013 due to his family's maritime background.
-                </p>
-                <p>
-                    After his high school education, he worked on international ships with the decision to both develop himself by intertwining with different cultures and to financially support his undergraduate education. Cgncvk In line with the requirements of the time gained practical experience and a unique perspective that laid the groundwork for his future endeavors. Having succeeded in the necessary examinations for additional courses, cgncvk became a certified marine engineer as well.
+                    After his high school education in the maritime field, which he started with the influence of his family's maritime background, he worked on international ships with the decision to both develop himself by being intertwined with different cultures and to provide financial support for his undergraduate education.  Cgncvk In line with the requirements of the time gained practical experience and a unique perspective that laid the groundwork for his future endeavors. Having succeeded in the necessary examinations for additional courses, cgncvk became a certified marine engineer as well.
                 </p>
                 <p>
                     He completed his bachelor's degree in mechatronics engineering in order to create the infrastructure for his goals. Throughout his undergraduate years, Cgncvk engaged in diverse engineering projects, honing his skills and gaining insights into the intersection of engineering disciplines. He completed his undergraduate education in Mechatronics Engineering at Sakarya University, Faculty of Technology.
