--- a/index.html
+++ b/index.html
@@ -74,16 +74,10 @@
             <h1>about</h1>
             <section>
                 <p>
-                    For Cgncvk, the complexity of life and the infinite possibilities of the universe have always been a matter of curiosity, and he aims to make the universe more understandable and more habitable.
+                    The complexity of life and the infinite possibilities of the universe have always been a subject of curiosity for me, and I aim to make the universe more understandable and more livable. In this direction, he takes a holistic approach to problem solving by collaborating in projects that bridge engineering and social sciences. In this quest, he continues to struggle to make sense of life and unravel the complexity of the universe by increasing his knowledge in formal, natural and social sciences.
                 </p>
                 <p>
-                    Collaborating on projects that bridged the gap between engineering and social sciences, he demonstrated a holistic approach to problem-solving. Cgncvk, in his relentless pursuit, continues to struggle to make sense of life and unravel the complexity of the universe by increasing his knowledge in formal, natural, and social sciences.
-                </p>
-                <p>
-                    His commitment to unraveling the mysteries of life extended to social sciences, where he recognized the importance of societal perspectives in understanding scientific advancements.
-                </p> 
-                <p>
-                    Armed with a wealth of academic achievements and professional experiences, Cagin envisions a future where scientific and social interactions harmonize seamlessly. The goal is not just personal success but a collective elevation of understanding, where the dialogue between humanity and science creates a symphony of progress.
+                    Equipping myself with professional experiences and academic achievements, I envision a future where scientific and social interactions are seamlessly harmonized. The goal is not just personal achievement, but a collective rise of understanding where the dialog between humanity and science creates a symphony of progress.
                 </p>
                 <p>
                     After his high school education in the maritime field, which he started with the influence of his family's maritime background, he worked on international ships with the decision to both develop himself by being intertwined with different cultures and to provide financial support for his undergraduate education.  Cgncvk In line with the requirements of the time gained practical experience and a unique perspective that laid the groundwork for his future endeavors. Having succeeded in the necessary examinations for additional courses, cgncvk became a certified marine engineer as well.
