--- a/index.html
+++ b/index.html
@@ -10,6 +10,21 @@
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     <link rel="stylesheet" href="index.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Project Selector</title>
+    <style>
+        /* Your CSS code here */
+        /* Hide project content by default */
+        .project {
+            display: none;
+        }
+
+        /* Show project content when radio button is checked */
+        input[type="radio"]:checked + label + .project {
+            display: block;
+        }
+    </style>    
 </head>
 <body>
     <div id="loading">
@@ -53,35 +68,35 @@
         </table>
     </div>
     <div id="work_container" class="container">
-    <div onclick="closework()"><i class="fas fa-angle-right"></i></div>
-    <h1>projects</h1>
-    <section>
-        <h2>Some Ongoing Projects</h2>
-        <input type="radio" name="project" id="project1" checked>
-        <label for="project1" class="btn_one">Project 1</label>
-        <input type="radio" name="project" id="project2">
-        <label for="project2" class="btn_two">Project 2</label>
-        <div class="project" id="project1_content">
-            <p>
-                Project 1: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-            </p>
-            <div id="used1">
-                <div><i class="fas fa-circle"></i>&nbsp;HTML5</div>
-                <div><i class="fas fa-circle"></i>&nbsp;CSS3</div>
-                <div><i class="fas fa-circle"></i>&nbsp;Javascript</div>
+        <div onclick="closework()"><i class="fas fa-angle-right"></i></div>
+        <h1>projects</h1>
+        <section>
+            <h2>Some Ongoing Projects</h2>
+            <input type="radio" name="project" id="project1" checked>
+            <label for="project1" class="btn_one">Project 1</label>
+            <input type="radio" name="project" id="project2">
+            <label for="project2" class="btn_two">Project 2</label>
+            <div class="project" id="project1_content">
+                <p>
+                    Project 1: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                </p>
+                <div id="used1">
+                    <div><i class="fas fa-circle"></i>&nbsp;HTML5</div>
+                    <div><i class="fas fa-circle"></i>&nbsp;CSS3</div>
+                    <div><i class="fas fa-circle"></i>&nbsp;Javascript</div>
+                </div>
             </div>
-        </div>
-        <div class="project" id="project2_content">
-            <p>
-                Project 2: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-            </p>
-            <div id="used2">
-                <div><i class="fas fa-circle"></i>&nbsp;React.js</div>
-                <div><i class="fas fa-circle"></i>&nbsp;Node.js</div>
-                <div><i class="fas fa-circle"></i>&nbsp;MongoDB</div>
+            <div class="project" id="project2_content">
+                <p>
+                    Project 2: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                </p>
+                <div id="used2">
+                    <div><i class="fas fa-circle"></i>&nbsp;React.js</div>
+                    <div><i class="fas fa-circle"></i>&nbsp;Node.js</div>
+                    <div><i class="fas fa-circle"></i>&nbsp;MongoDB</div>
+                </div>
             </div>
-        </div>
-    </section>
+        </section>
     </div>
     <div id="about_container" class="container">
             <div onclick="closeabout()"><i class="fas fa-angle-left"></i></div>
