--- a/index.html
+++ b/index.html
@@ -100,44 +100,31 @@
             <h1>about</h1>
             <section>
                 <p>
-                    The complexity of life and the infinite possibilities of the universe have always been a subject of curiosity for me, and I aim to make the universe more understandable and more livable. In this direction, he takes a holistic approach to problem solving by collaborating in projects that bridge engineering and social sciences. In this quest, he continues to struggle to make sense of life and unravel the complexity of the universe by increasing his knowledge in formal, natural and social sciences.
-                </p>
+                    The complexity of life and the infinite possibilities of the universe have always been a subject of curiosity for me, and I aim to make the universe more understandable and more livable. In this direction, he takes a holistic approach to problem solving by collaborating in projects that bridge engineering and social sciences. In this quest, he continues to struggle to make sense of life and unravel the complexity of the universe by increasing his knowledge in formal, natural and social sciences.                </p>
                 <p>
-                    Equipping myself with professional experiences and academic achievements, I envision a future where scientific and social interactions are seamlessly harmonized. The goal is not just personal achievement, but a collective rise of understanding where the dialog between humanity and science creates a symphony of progress.
-                </p>
+                    Equipping myself with professional experiences and academic achievements, I envision a future where scientific and social interactions are seamlessly harmonized. The goal is not just personal achievement, but a collective rise of understanding where the dialog between humanity and science creates a symphony of progress.                </p>
                 <p>
-                    After his high school education in the maritime field, which he started with the influence of his family's maritime background, he worked on international ships with the decision to both develop himself by being intertwined with different cultures and to provide financial support for his undergraduate education.  Cgncvk In line with the requirements of the time gained practical experience and a unique perspective that laid the groundwork for his future endeavors. Having succeeded in the necessary examinations for additional courses, cgncvk became a certified marine engineer as well.
-                </p>
+                    After my high school education in the maritime field, which I started with the influence of my family's maritime background, I worked on international ships with the decision to improve myself by being intertwined with different cultures and to provide financial support for my undergraduate education. The practical experience and original perspective I gained in line with the requirements of the time prepared the ground for my future studies. After passing the exams required for additional courses, I also became a certified marine engineer.                </p>
                 <p>
-                    He completed his bachelor's degree in mechatronics engineering in order to create the infrastructure for his goals. Throughout his undergraduate years, Cgncvk engaged in diverse engineering projects, honing his skills and gaining insights into the intersection of engineering disciplines. He completed his undergraduate education in Mechatronics Engineering at Sakarya University, Faculty of Technology.
-                </p>
+                    To lay the groundwork for his goals, I completed my undergraduate studies in mechatronics engineering. Throughout my undergraduate years, I developed skills and gained insights into the intersection of engineering disciplines by participating in various engineering projects.                </p>
                 <p>
-                    Driven by curiosity, Cgncvk developed his academic journey from Mechatronics to the complex field of neuroscience/neuroengineering with the aim to first understand the mechanisms of his own body in order to understand the universe. The merging of technology and the human mind became a focal point, reflecting Cgncvk's commitment to understanding the complexities of the brain.
-                </p>
+                    I steered my academic journey from Mechatronics to neuroscience/neuroengineering with the goal of first understanding our own body mechanisms in order to understand the universe. The confluence of technology and the human mind became a focus reflecting my commitment to understanding the complexities of the brain.                </p>
                 <p>
-                    He continued his brain research and biotechnology studies professionally at Sankara Brain and Biotechnology Research Center with academia-industry collaborations. During this period, he was involved in various technology business ventures. He continued his engineering, data science approach and collaborations in the fields of basic sciences, medicine and veterinary medicine.
-                </p>
+                    He continued his brain research and biotechnology studies professionally in academia-industry collaborations to investigate the effects of various molecules on brain activity and cognitive performance and product development. During this period, he made business ventures in various fields. He continued his engineering, data science approach and collaborations in basic sciences, medicine and veterinary medicine.                </p>
                 <p>
-                    After discovering the field of biophysics, he completed his master's degree at Istanbul University-Cerrahpaşa with the principle of integration of engineering sensitivity, social sciences and medical sciences. As the sun sets on each achievement, a new dawn emerges with the ongoing Ph.D. journey in Biophysics in Istanbul University-Cerrahpasa Medical Faculty. Cgncvk's commitment to expanding the boundaries of knowledge persists, contributing to the ever-growing tapestry of scientific understanding.
-                </p>
+                    After discovering the field of biophysics, he completed his master's degree at Istanbul University-Cerrahpaşa with the principle of integration of engineering sensitivity, social sciences and medical sciences. As the sun sets on each achievement, a new dawn emerges with the ongoing Ph.D. journey in Biophysics in Istanbul University-Cerrahpasa Medical Faculty. Cgncvk's commitment to expanding the boundaries of knowledge persists, contributing to the ever-growing tapestry of scientific understanding.                </p>
                 <p>
-                    Transitioning seamlessly into the professional realm, Cgncvk embraced the role of a biomedical engineer. Academic collaborations became the bridge between theory and practice, enhancing Cgncvk's ability to apply cutting-edge knowledge to real-world challenges.
-                </p>
+                    I continue my professional career in my adopted role as a biomedical engineer. I focus on academic collaborations, bridging theory and practice, and the ability to apply current developments to real-world challenges.                  </p>              
                 <p>
-                    Presently, He continues his work as a dedicated member of the Digital Healthcare team with passion in the field of biomedical engineering. His proficiency in navigating the medical system development flow is evident in his hands-on role within multi-disciplinary teams. He not only supports clinical validation activities but also liaises with external parties for clinical studies, overseeing data collection and providing meticulous physiologically relevant data analysis and interpretation.
-                </p>
+                    My competence in driving the flow of medical system development within Digital Health is realized through collaborations with multidisciplinary teams. In addition to supporting clinical validation activities, I also manage liaison with external parties for clinical trials, oversee data collection and ensure rigorous physiologically relevant data analysis and interpretation.
                 <p>
-                    With a conviction that his current fields of work are key to making sense of life, Cgncvk continues to push the boundaries of scientific exploration.
-                </p>
+                    In the process of prototyping and developing systems, I collaborate hands-on with multi-disciplinary teams including Legal and Ethics committees, Finance departments, Medical professionals, HW, SW and Algorithm Engineers.                </p>
                 <p>
-                    Be a hands-on member of multi-disciplinary teams of HW, SW and Algorithm Engineers to prototype and develop breakthrough medical systems.
-                </p>
+                    I continue to dynamically pursue my goals and plans in the direction of applying the complexity of life through the lens of science and innovation.                </p>
                 <p>
-                    Cgncvk embodies the spirit of a hands-on explorer, fearlessly navigating the complexities of life through the lens of science and innovation. Cgncvk, who is married, also carries out various joint projects with his wife, who is a computer scientist.
-                </p>
+                    Cgncvk, who is married, also carries out various joint projects with his wife, who is a computer scientist.                </p>
                 <p>
-                    He also works to improve both his mind and body by engaging in sports such as street workout. His passion extends to digital art, where he captures and creates moments that transcend the ordinary.
-                </p>
+                    He also works to improve both his mind and body by engaging in sports such as street workout. His passion extends to digital art, where he captures and creates moments that transcend the ordinary.                </p>
             </section>
         </div>
           <div id="contact_container" class="container">
