--- a/index.html
+++ b/index.html
@@ -52,35 +52,36 @@
     </tr>
         </table>
     </div>
-    <div id="work_container" class="container">
+<div id="work_container" class="container">
     <div onclick="closework()"><i class="fas fa-angle-right"></i></div>
-    <h1>projects</h1>
+    <h1>works.</h1>
     <section>
-        <h2>Some Ongoing Projects</h2>
-        <button class="btn_one" onclick="showProject('project1_content')">Project 1</button>
-        <button class="btn_two" onclick="showProject('project2_content')">Project 2</button>
-        <div class="project" id="project1_content">
-            <p>
-                Project 1: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-            </p>
-            <div id="used1">
-                <div><i class="fas fa-circle"></i>&nbsp;HTML5</div>
-                <div><i class="fas fa-circle"></i>&nbsp;CSS3</div>
-                <div><i class="fas fa-circle"></i>&nbsp;Javascript</div>
-            </div>
+        <h2>work title</h2>
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        </p>
+        <div id="used">
+            <div><i class="fas fa-circle"></i>&nbsp;HTML5</div>
+            <div><i class="fas fa-circle"></i>&nbsp;CSS3</div>
+            <div><i class="fas fa-circle"></i>&nbsp;Javascript</div>
         </div>
-        <div class="project" id="project2_content">
-            <p>
-                Project 2: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-            </p>
-            <div id="used2">
-                <div><i class="fas fa-circle"></i>&nbsp;React.js</div>
-                <div><i class="fas fa-circle"></i>&nbsp;Node.js</div>
-                <div><i class="fas fa-circle"></i>&nbsp;MongoDB</div>
-            </div>
-        </div>
+        <button class="btn_one" onclick="showProject('project1_content')">Show Project 1</button>
+        <button class="btn_two" onclick="showProject('project2_content')">Show Project 2</button>
     </section>
+    <div class="project" id="project1_content">
+        <h2>Project 1</h2>
+        <p>
+            Project 1 details...
+        </p>
     </div>
+    <div class="project" id="project2_content">
+        <h2>Project 2</h2>
+        <p>
+            Project 2 details...
+        </p>
+    </div>
+</div>
+
 <script>
     function showProject(projectId) {
         // Hide all project details
