--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
         var selectedProject = document.getElementById(projectId);
         selectedProject.style.display = 'block';
 
-        // Add 'selected' class to the clicked button
+        // Add 'selected' class only to the clicked button
         button.classList.add('selected');
     }
 </script>
