--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
         </p>
         <button class="btn_one" onclick="showProject('project1_content', this)">Show Project 1</button>
         <button class="btn_two" onclick="showProject('project2_content', this)">Show Project 2</button>
+        <button class="btn_two" onclick="showProject('project3_content', this)">Show Project 3</button>
     </section>
     <div class="project" id="project1_content">
         <h2>Project 1</h2>
@@ -105,6 +106,23 @@
         <p>
             Project 2 details...
         </p>
+        <div id="used">
+        <div><i class="fas fa-circle"></i>&nbsp;Python</div>
+        <div><i class="fas fa-circle"></i>&nbsp;Tensorflow</div>
+        <div><i class="fas fa-circle"></i>&nbsp;Statistics</div>
+        </div>
+    </div>
+    <div class="project" id="project2_content">
+        <h2>Project 2</h2>
+        <p>
+            Project 2 details...
+        </p>
+        <div id="used">
+        <div><i class="fas fa-circle"></i>&nbsp;Data Handling</div>
+        <div><i class="fas fa-circle"></i>&nbsp;Signal Processing</div>
+        <div><i class="fas fa-circle"></i>&nbsp;Data Analysis</div>
+        <div><i class="fas fa-circle"></i>&nbsp;Matlab</div>
+        </div>
     </div>
 </div>
 
