--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
             Various projects I worked on.
         </p>
         <button class="btn_one" onclick="showProject('project1_content', this)">Show Project 1</button>
-        <button class="btn_two" onclick="showProject('project2_content', this)">Show Project 2</button>
-        <button class="btn_two" onclick="showProject('project3_content', this)">Show Project 3</button>
+        <button class="btn_one" onclick="showProject('project2_content', this)">Show Project 2</button>
+        <button class="btn_one" onclick="showProject('project3_content', this)">Show Project 3</button>
     </section>
     <div class="project" id="project1_content">
         <h2>Project 1</h2>
@@ -112,10 +112,10 @@
         <div><i class="fas fa-circle"></i>&nbsp;Statistics</div>
         </div>
     </div>
-    <div class="project" id="project2_content">
+    <div class="project" id="project3_content">
         <h2>Project 2</h2>
         <p>
-            Project 2 details...
+            Project 3 details...
         </p>
         <div id="used">
         <div><i class="fas fa-circle"></i>&nbsp;Data Handling</div>
