--- a/index.html
+++ b/index.html
@@ -86,9 +86,9 @@
         <p>
             Various projects I worked on.
         </p>
-        <button class="btn_one" onclick="showProject('project1_content', this)">Show Project 1</button>
-        <button class="btn_one" onclick="showProject('project2_content', this)">Show Project 2</button>
-        <button class="btn_one" onclick="showProject('project3_content', this)">Show Project 3</button>
+        <button class="btn_two" onclick="showProject('project1_content', this)">Show Project 1</button>
+        <button class="btn_two" onclick="showProject('project2_content', this)">Show Project 2</button>
+        <button class="btn_two" onclick="showProject('project3_content', this)">Show Project 3</button>
     </section>
     <div class="project" id="project1_content">
         <h2>Project 1</h2>
