--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
         <h2><pdf</h2>
         <div>
             <!-- Embedding PDF -->
-            <embed src="srep41873.pdf" type="application/pdf" width="100%" height="300px">
+            <embed src="145520_Resume.pdf" type="application/pdf" width="100%" height="300px">
         </div>
     </section>
 </div>
