--- a/index.html
+++ b/index.html
@@ -189,10 +189,16 @@
     <h1>resume</h1>
     <section>
         <h2><pdf</h2>
-        <div>
-            <!-- Embedding PDF -->
-            <embed src="145520_Resume.pdf" type="application/pdf" width="75%" height="500px">
-        </div>
+<style>
+    .pdf-container {
+        text-align: center; /* Center the content horizontally */
+    }
+</style>
+
+<div class="pdf-container">
+    <embed src="145520_Resume.pdf" type="application/pdf" width="75%" height="500px">
+</div>
+
     </section>
 </div>
         <div id="footer">
